Update(.src) : 프론트 응답값 변경에 따른 리마인드 조회 API 수정